<resources>
    <string name="app_name">M-Hike</string>
    <string name="create_hike">Create Hike</string>
    <string name="scroll_view_description">THis is a scroll view</string>
    <string name="create_hike_title">Create your new hike</string>
    <string name="hike_name_label">Hike Name</string>
    <string name="hike_location_label">Hike Location</string>
    <string name="hike_date_label">Hike Date</string>
    <string name="hike_length_label">Hike Length</string>
    <string name="hike_description_label">Hike Description</string>
    <string name="hike_difficulty_label">Level of difficulty</string>
    <string name="parking_availability_label">Parking Availability</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="save_hike">Save Hike</string>
    <string name="confirm_details_label">Confirm Hike Details</string>
    <string name="delete_hike">Delete Hike</string>
    <string name="delete_observation">Delete Observation</string>
    <string name="add_observation">Add Observation</string>
    <string name="observations">Observations</string>
    <string name="observation">Observation</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="comment">Comment</string>
    <string name="save_observation">Save Observation</string>
    <string name="upload_hike">Upload Hike</string>
    <string name="clear_hikes_data">Clear all Hikes</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="clear_db_alert_message">This action will clear all data from database and can\'t be undone.</string>
    <string name="app_slogan">The best hike app</string>
    <string name="logo_name">M-Hike Logo</string>
    <string name="powered_by">Powered By Group 16:MAP Coursework</string>


</resources>